Added: Dynamically course display feature

--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Dev Academy - Online Training Platform" />
     <link rel="apple-touch-icon" href="./logo192.png" />
     <link rel="manifest" href="./manifest.json" />
-    <title>React Bussiness App</title>
+    <title>Dev Academy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
